# labelmusic

./: .gitignore  CMakeLists.txt  LICENSE.txt
include/: apiGraphic.h  apiMap.h  data.h  game.h  menu.h
logo/: global_logo.kra  labelmusic_logo.kra
src/: main.c
src/apis/: apiGraphic.c  apiMap.c
src/game/: game.c  menu.c
src/map_editor/: main.c
src/shaders/: default_color_shader.fsh
test/: get_dir.c  mapdata.c  mapdatacreate.c
